<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lesson2.Lesson_2">


    <TextView
        android:id="@+id/calc_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/fone"
        android:gravity="end"
        android:textSize="@dimen/OutTextSize"
        app:layout_constraintBottom_toTopOf="@+id/grid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calc_view">

        <com.google.android.material.button.MaterialButton
            style="@style/PurpleButton"
            android:id="@+id/butt_С"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_columnWeight="1"
            android:elevation="@dimen/elevation"
            android:text="@string/text_c"
            android:textSize="@dimen/buttonTextSize" />

        <com.google.android.material.button.MaterialButton
            style="@style/PurpleButton"
            android:id="@+id/butt_delete"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_columnWeight="1"
            android:elevation="@dimen/elevation"
            android:stateListAnimator="@null"
            android:translationZ="4dp"
            android:text="@string/text_del"
            android:textSize="@dimen/buttonTextSize" />

        <com.google.android.material.button.MaterialButton
            style="@style/PurpleButton"
            android:id="@+id/butt_percent"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_columnWeight="1"
            android:elevation="@dimen/elevation"
            android:text="@string/text_perc"
            android:textSize="@dimen/buttonTextSize" />

        <com.google.android.material.button.MaterialButton
            style="@style/PurpleButton"
            android:id="@+id/butt_division"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_columnWeight="1"
            android:elevation="@dimen/elevation"
            android:text="@string/text_division"
            android:textSize="@dimen/buttonTextSize" />

        <com.google.android.material.button.MaterialButton
            style="@style/PurpleButton"
            android:id="@+id/butt_7"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_columnWeight="1"
            android:elevation="@dimen/elevation"
            android:text="@string/text_7"
            android:textSize="@dimen/buttonTextSize" />

        <com.google.android.material.button.MaterialButton
            style="@style/PurpleButton"
            android:id="@+id/butt_8"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_columnWeight="1"
            android:elevation="@dimen/elevation"
            android:text="@string/text_8"
            android:textSize="@dimen/buttonTextSize" />

        <com.google.android.material.button.MaterialButton
            style="@style/PurpleButton"
            android:id="@+id/butt_9"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_columnWeight="1"
            android:elevation="@dimen/elevation"
            android:text="@string/text_9"
            android:textSize="@dimen/buttonTextSize" />

        <com.google.android.material.button.MaterialButton
            style="@style/PurpleButton"
            android:id="@+id/butt_X"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_columnWeight="1"
            android:elevation="@dimen/elevation"
            android:text="@string/text_x"
            android:textSize="@dimen/buttonTextSize" />

        <com.google.android.material.button.MaterialButton
            style="@style/PurpleButton"
            android:id="@+id/butt_4"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_columnWeight="1"
            android:elevation="@dimen/elevation"
            android:text="@string/text_4"
            android:textSize="@dimen/buttonTextSize" />

        <com.google.android.material.button.MaterialButton
            style="@style/PurpleButton"
            android:id="@+id/butt_5"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_columnWeight="1"
            android:elevation="@dimen/elevation"
            android:text="@string/text_5"
            android:textSize="@dimen/buttonTextSize" />

        <com.google.android.material.button.MaterialButton
            style="@style/PurpleButton"
            android:id="@+id/butt_6"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_columnWeight="1"
            android:elevation="@dimen/elevation"
            android:text="@string/text_6"
            android:textSize="@dimen/buttonTextSize" />

        <com.google.android.material.button.MaterialButton
            style="@style/PurpleButton"
            android:id="@+id/butt_minus"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_columnWeight="1"
            android:elevation="@dimen/elevation"
            android:text="@string/text_minus"
            android:textSize="@dimen/buttonTextSize" />

        <com.google.android.material.button.MaterialButton
            style="@style/PurpleButton"
            android:id="@+id/butt_1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_columnWeight="1"
            android:elevation="@dimen/elevation"
            android:text="@string/text_1"
            android:textSize="@dimen/buttonTextSize" />

        <com.google.android.material.button.MaterialButton
            style="@style/PurpleButton"
            android:id="@+id/butt_2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_columnWeight="1"
            android:elevation="@dimen/elevation"
            android:text="@string/text_2"
            android:textSize="@dimen/buttonTextSize" />

        <com.google.android.material.button.MaterialButton
            style="@style/PurpleButton"
            android:id="@+id/butt_3"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_columnWeight="1"
            android:elevation="@dimen/elevation"
            android:text="@string/text_3"
            android:textSize="@dimen/buttonTextSize" />

        <com.google.android.material.button.MaterialButton
            style="@style/PurpleButton"
            android:id="@+id/butt_plus"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_columnWeight="1"
            android:elevation="@dimen/elevation"
            android:text="@string/text_plus"
            android:textSize="@dimen/buttonTextSize" />


        <com.google.android.material.button.MaterialButton
            style="@style/PurpleButton"
            android:id="@+id/butt_0"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:elevation="@dimen/elevation"
            android:text="@string/text_0"
            android:textSize="@dimen/buttonTextSize" />

        <com.google.android.material.button.MaterialButton
            style="@style/PurpleButton"
            android:id="@+id/butt_dot"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_columnWeight="1"
            android:elevation="@dimen/elevation"
            android:text="@string/text_dot"
            android:textSize="@dimen/buttonTextSize" />

        <com.google.android.material.button.MaterialButton
            style="@style/PurpleButton"
            android:id="@+id/butt_equals"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_columnWeight="1"
            android:elevation="@dimen/elevation"
            android:text="@string/text_equals"
            android:textSize="@dimen/buttonTextSize" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>